# por_clap_lamp

./: CMakeLists.txt  ClapDetector.cpp  ClapDetector.h  TriacDimmer.cpp  TriacDimmer.h  main.cpp
